--- a/src/SBMonitor.Infrastructure/SBMonitor.Infrastructure.csproj
+++ b/src/SBMonitor.Infrastructure/SBMonitor.Infrastructure.csproj
@@ -13,14 +13,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.2" />
+    <PackageReference Include="SignalR.Orleans" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SBMonitor.Core\SBMonitor.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
