--- a/src/SBMonitor.API/Properties/launchSettings.json
+++ b/src/SBMonitor.API/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "launchBrowser": false,
       "applicationUrl": "https://localhost:7175;http://localhost:5175",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     }
   }
