--- a/src/SBMonitor.BlazorApp/wwwroot/appsettings.json
+++ b/src/SBMonitor.BlazorApp/wwwroot/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Auth0": {
     "Authority": "https://dev-qqejsnzb.us.auth0.com",
-    "ClientId": "mqCPuaTODukoqMugQqLxPXLypXIhNRER"
+    "ClientId": "mqCPuaTODukoqMugQqLxPXLypXIhNRER",
+    "Audience": "https://api.message-silo.com"
   }
 }
