--- a/src/SBMonitor.API/SBMonitor.API.csproj
+++ b/src/SBMonitor.API/SBMonitor.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
     <PackageReference Include="Microsoft.Orleans.Persistence.AzureStorage" Version="3.6.2" />
     <PackageReference Include="Microsoft.Orleans.Server" Version="3.6.2" />
     <PackageReference Include="OrleansDashboard" Version="3.6.2" />
