--- a/src/SBMonitor.API/appsettings.json
+++ b/src/SBMonitor.API/appsettings.json
@@ -1,3 +1,7 @@
 {
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "https://dev-qqejsnzb.us.auth0.com",
+    "Audience": "https://api.message-silo.com"
+  }
 }
