--- a/src/SBMonitor.API/SBMonitor.API.csproj
+++ b/src/SBMonitor.API/SBMonitor.API.csproj
@@ -18,4 +18,9 @@
     <ProjectReference Include="..\SBMonitor.Infrastructure\SBMonitor.Infrastructure.csproj" />
   </ItemGroup>
 
+  <Target Name="ZipPublishOutput" AfterTargets="Publish">
+    <Delete Files="$(ProjectDir)\..\silo.zip" />
+    <ZipDirectory SourceDirectory="$(PublishDir)" DestinationFile="$(ProjectDir)\..\silo.zip" />
+  </Target>
+
 </Project>
