--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,9 +38,9 @@ jobs:
             appName=${{ env.UNIQUE_APP_NAME }} \
           --debug
 
-    - name: Webapp deploy
-      run: |
-        az webapp deploy --name ${{ env.UNIQUE_APP_NAME }} \
-          --resource-group ${{ env.AZURE_RESOURCE_GROUP_NAME  }} \
-          --clean true --restart true \
-          --type zip --src-path silo.zip --debug
+    # - name: Webapp deploy
+    #   run: |
+    #     az webapp deploy --name ${{ env.UNIQUE_APP_NAME }} \
+    #       --resource-group ${{ env.AZURE_RESOURCE_GROUP_NAME  }} \
+    #       --clean true --restart true \
+    #       --type zip --src-path silo.zip --debug
