--- a/src/SBMonitor.Core/SBMonitor.Core.csproj
+++ b/src/SBMonitor.Core/SBMonitor.Core.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.0" />
+    <PackageReference Include="Microsoft.ClearScript.V8" Version="7.3.4" />
+  </ItemGroup>
+
 </Project>
