--- a/src/SBMonitor.Core/SBMonitor.Core.csproj
+++ b/src/SBMonitor.Core/SBMonitor.Core.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.0" />
-    <PackageReference Include="Microsoft.ClearScript.V8" Version="7.3.4" />
+    <PackageReference Include="Jint" Version="3.0.0-beta-2042" />
   </ItemGroup>
 
 </Project>
