--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "https://dev-qqejsnzb.us.auth0.com",
+    "Audience": "https://api.message-silo.com"
+  }
 }
