--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp.csproj
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Compile Remove="Pages\Dashboard.razor.cs" />
-    <Compile Remove="Shared\ConnectionSettingsModal.razor.cs" />
     <Compile Remove="Shared\DashboardItem.razor.cs" />
     <Compile Remove="Shared\DefaultJsonMessageDisplayer.razor.cs" />
     <Compile Remove="Shared\PinnerMessageDisplayer.razor.cs" />
@@ -16,15 +15,14 @@
 
   <ItemGroup>
     <Content Remove="Pages\Dashboard.razor" />
-    <Content Remove="Shared\ConnectionSettingsModal.razor" />
     <Content Remove="Shared\DashboardItem.razor" />
     <Content Remove="Shared\DefaultJsonMessageDisplayer.razor" />
     <Content Remove="Shared\PinnerMessageDisplayer.razor" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Blazorise.Bootstrap5" Version="1.0.4" />
-    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.0.4" />
+    <PackageReference Include="Blazorise.Bootstrap5" Version="1.1.2" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.8" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.6" />
@@ -36,6 +34,10 @@
 
   <ItemGroup>
     <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MessageSilo.Shared\MessageSilo.Shared.csproj" />
   </ItemGroup>
 
 </Project>
