--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DeadLetterMessageRepository": {
+    "Url": "http://localhost:8086",
+    "Bucket": "DeadLetteredMessages",
+    "Token": "9AuLB81TvC3h1Jyu03ECu36fN0BZpj4KvHj3S82_aWnZkCAOW34d-vhDxrK7KcNWasZCWgZoQW6QmiyPCit6rg=="
+  }
 }
