--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -9,5 +9,10 @@
   "Auth0": {
     "Domain": "https://dev-qqejsnzb.us.auth0.com",
     "Audience": "https://api.message-silo.com"
+  },
+  "DeadLetterMessageRepository": {
+    "Url": "http://localhost:8086",
+    "Bucket": "DeadLetteredMessages",
+    "Token": "9AuLB81TvC3h1Jyu03ECu36fN0BZpj4KvHj3S82_aWnZkCAOW34d-vhDxrK7KcNWasZCWgZoQW6QmiyPCit6rg=="
   }
 }
