--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Domain": "https://dev-qqejsnzb.us.auth0.com",
-    "Audience": "https://api.message-silo.com"
+    "Domain": "https://message-silo.eu.auth0.com",
+    "Audience": "https://api.message-silo.dev"
   },
   "DeadLetterMessageRepository": {
     "Url": "http://localhost:8086",
