--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/MessageSilo.BlazorApp.csproj
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/MessageSilo.BlazorApp.csproj
@@ -16,6 +16,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="6.0.13" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.*" PrivateAssets="all" />
 	</ItemGroup>
 
