--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/Properties/launchSettings.json
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/Properties/launchSettings.json
@@ -5,10 +5,10 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7243;http://localhost:5081",
+      "applicationUrl": "https://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "MessageSiloAPIURL": "https://localhost:7132"
+        "MessageSiloAPIURL": "https://localhost:5001"
       }
     }
   }
