--- a/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/wwwroot/appsettings.json
+++ b/src/MessageSilo.BlazorApp/MessageSilo.BlazorApp/wwwroot/appsettings.json
@@ -3,5 +3,8 @@
     "Authority": "https://message-silo.eu.auth0.com",
     "ClientId": "0HYdnKIN6T1JKyVCgY38sZlr5zmQTBmb",
     "Audience": "https://api.message-silo.dev"
+  },
+  "MessageSilo.Api": {
+    "Url": "https://localhost:5001"
   }
 }
