--- a/src/MessageSilo.Silo/Properties/launchSettings.json
+++ b/src/MessageSilo.Silo/Properties/launchSettings.json
@@ -1,13 +1,13 @@
-﻿{
+{
   "profiles": {
     "MessageSilo.Silo": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:5000",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:5001"
     }
   }
 }
