--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -11,8 +11,11 @@
     "Audience": "https://api.message-silo.dev"
   },
   "DeadLetterMessageRepository": {
-    "Url": "http://localhost:8086",
+    "Url": "messsagesilo.influxdb:8086",
     "Bucket": "DeadLetteredMessages",
-    "Token": "9AuLB81TvC3h1Jyu03ECu36fN0BZpj4KvHj3S82_aWnZkCAOW34d-vhDxrK7KcNWasZCWgZoQW6QmiyPCit6rg=="
+    "Token": "$(DeadLetterMessageRepository.Token)"
+  },
+  "ConnectionStrings": {
+    "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
   }
 }
