--- a/src/MessageSilo.BlazorApp/Properties/launchSettings.json
+++ b/src/MessageSilo.BlazorApp/Properties/launchSettings.json
@@ -5,10 +5,9 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:5002",
+      "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "MessageSiloAPIURL": "https://localhost:5001"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
