--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -9,7 +9,7 @@
   "DeadLetterMessageRepository": {
     "Url": "http://localhost:8086",
     "Bucket": "DeadLetteredMessages",
-    "Token": "$(DeadLetterMessageRepository.Token)"
+    "Token": "local-test"
   },
   "ConnectionStrings": {
     "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
