--- a/src/MessageSilo.Silo/appsettings.json
+++ b/src/MessageSilo.Silo/appsettings.json
@@ -13,5 +13,8 @@
   },
   "ConnectionStrings": {
     "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
+  },
+  "Orleans": {
+    "PrimarySiloAddress": "10.5.0.5"
   }
 }
