--- a/src/MessageSilo.API/appsettings.json
+++ b/src/MessageSilo.API/appsettings.json
@@ -11,11 +11,14 @@
     "Audience": "https://api.message-silo.dev"
   },
   "DeadLetterMessageRepository": {
-    "Url": "messsagesilo.influxdb:8086",
+    "Url": "http://localhost:8086",
     "Bucket": "DeadLetteredMessages",
-    "Token": "$(DeadLetterMessageRepository.Token)"
+    "Token": "local-test"
   },
   "ConnectionStrings": {
     "GrainStateStorage": "$(ConnectionStrings.GrainStateStorage)"
+  },
+  "Orleans": {
+    "PrimarySiloAddress": "10.5.0.5"
   }
 }
