--- a/src/MessageSilo.BlazorApp/Properties/launchSettings.json
+++ b/src/MessageSilo.BlazorApp/Properties/launchSettings.json
@@ -7,7 +7,7 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5000",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Local"
       }
     }
   }
