--- a/src/MessageSilo.Shared/Properties/launchSettings.json
+++ b/src/MessageSilo.Shared/Properties/launchSettings.json
@@ -1,12 +1,12 @@
 {
   "profiles": {
-    "MessageSilo.API": {
+    "MessageSilo.Shared": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5000"
+      "applicationUrl": "https://localhost:58943;http://localhost:58945"
     }
   }
 }
