--- a/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
+++ b/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
@@ -5,10 +5,20 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PublishSingleFile>true</PublishSingleFile>
+    <SelfContained>true</SelfContained>
+    <PackageId>siloctl</PackageId>
+    <Title>Message Silo CLI</Title>
+    <Version>0.0.1</Version>
+    <Authors>Daniel Berki</Authors>
+    <Company>Message Silo</Company>
+    <Product>siloctl</Product>
+    <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="ConsoleTables" Version="2.4.2" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="YamlDotNet" Version="13.0.1" />
@@ -17,6 +27,13 @@
   <ItemGroup>
     <ProjectReference Include="..\MessageSilo.Features\MessageSilo.Features.csproj" />
     <ProjectReference Include="..\MessageSilo.Shared\MessageSilo.Shared.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="logo.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
