--- a/src/MessageSilo.SiloCTL/Properties/launchSettings.json
+++ b/src/MessageSilo.SiloCTL/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MessageSilo.SiloCTL": {
       "commandName": "Project",
-      "commandLineArgs": "-f \"C:\\temp\\conn1.yaml\""
+      "commandLineArgs": ""
     }
   }
 }
