--- a/src/MessageSilo.Features/MessageSilo.Features.csproj
+++ b/src/MessageSilo.Features/MessageSilo.Features.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.6.5" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
