--- a/.github/workflows/siloctl.yml
+++ b/.github/workflows/siloctl.yml
@@ -22,10 +22,15 @@ jobs:
       run: dotnet build
     - name: Publish - WINDOWS
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -r win-x64 --sc
+      run: dotnet publish -r win-x64 --sc -o "/publish/win-x64"
     - name: Publish - OSX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -r osx-x64 --sc
+      run: dotnet publish -r osx-x64 --sc -o "/publish/osx-x64"
     - name: Publish - LINUX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -r linux-x64 --sc
+      run: dotnet publish -r linux-x64 --sc -o "/publish/linux-x64"
+    - name: Upload Build Artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        name: ciloctl-artifacts
+        path: "./src/MessageSilo.SiloCTL/publish"
