--- a/.github/workflows/siloctl.yml
+++ b/.github/workflows/siloctl.yml
@@ -22,13 +22,13 @@ jobs:
       run: dotnet build
     - name: Publish - WINDOWS
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -r win-x64 --sc -o "/bin/Release/publish"
+      run: dotnet publish -c Release -r win-x64 --sc -o "/bin/Release/publish"
     - name: Publish - OSX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -r osx-x64 --sc -o "/bin/Release/publish"
+      run: dotnet publish -c Release -r osx-x64 --sc -o "/bin/Release/publish"
     - name: Publish - LINUX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -r linux-x64 --sc -o "/bin/Release/publish"
+      run: dotnet publish -c Release -r linux-x64 --sc -o "/bin/Release/publish"
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
