--- a/.github/workflows/siloctl.yml
+++ b/.github/workflows/siloctl.yml
@@ -22,15 +22,15 @@ jobs:
       run: dotnet build
     - name: Publish - WINDOWS
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -c Release -r win-x64 --sc
+      run: dotnet publish -c Release -r win-x64 --sc -o "/home/publish"
     - name: Publish - OSX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -c Release -r osx-x64 --sc
+      run: dotnet publish -c Release -r osx-x64 --sc -o "/home/publish"
     - name: Publish - LINUX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -c Release -r linux-x64 --sc
+      run: dotnet publish -c Release -r linux-x64 --sc -o "/home/publish"
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         name: ciloctl-artifacts
-        path: "./src/MessageSilo.SiloCTL/bin/Release/net6.0/publish/*-x64/MessageSilo.SiloCTL.*"
+        path: "/hume/publish"
