--- a/.github/workflows/siloctl.yml
+++ b/.github/workflows/siloctl.yml
@@ -33,4 +33,4 @@ jobs:
       uses: actions/upload-artifact@v3.1.2
       with:
         name: ciloctl-artifacts
-        path: "/hume/publish"
+        path: "/home/publish"
