--- a/.github/workflows/siloctl.yml
+++ b/.github/workflows/siloctl.yml
@@ -22,15 +22,15 @@ jobs:
       run: dotnet build
     - name: Publish - WINDOWS
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -c Release -r win-x64 --sc -o "/home/runner/work/MessageSilo/publish"
+      run: dotnet publish -c Release -r win-x64 --sc -o "/home/runner/work/MessageSilo/publish/win-x64"
     - name: Publish - OSX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -c Release -r osx-x64 --sc -o "/home/runner/work/MessageSilo/publish"
+      run: dotnet publish -c Release -r osx-x64 --sc -o "/home/runner/work/MessageSilo/publish/osx-x64"
     - name: Publish - LINUX
       working-directory: ./src/MessageSilo.SiloCTL
-      run: dotnet publish -c Release -r linux-x64 --sc -o "/home/runner/work/MessageSilo/publish"
+      run: dotnet publish -c Release -r linux-x64 --sc -o "/home/runner/work/MessageSilo/publish/linux-x64"
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         name: ciloctl-artifacts
-        path: "/home/runner/work/MessageSilo/publish"
+        path: "/home/runner/work/MessageSilo/publish/*"
