--- a/.github/workflows/siloctl.yml
+++ b/.github/workflows/siloctl.yml
@@ -30,6 +30,7 @@ jobs:
         echo "Approved"
         
   publish:  
+    needs: approve
     runs-on: ubuntu-latest
     steps: 
     - name: Publish - WINDOWS
