--- a/src/MessageSilo.Shared/MessageSilo.Shared.csproj
+++ b/src/MessageSilo.Shared/MessageSilo.Shared.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.6.5" />
+    <PackageReference Include="YamlDotNet" Version="13.0.2" />
   </ItemGroup>
 
   <ItemGroup>
