--- a/src/MessageSilo.Features/MessageSilo.Features.csproj
+++ b/src/MessageSilo.Features/MessageSilo.Features.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK.SQS" Version="3.7.100.95" />
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.11.0" />
     <PackageReference Include="Jint" Version="3.0.0-beta-2042" />
     <PackageReference Include="Microsoft.Orleans.CodeGenerator.MSBuild" Version="3.6.5">
