--- a/src/MessageSilo.Features/MessageSilo.Features.csproj
+++ b/src/MessageSilo.Features/MessageSilo.Features.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Microsoft.Orleans.Core" Version="3.6.5" />
     <PackageReference Include="Microsoft.Orleans.Runtime.Abstractions" Version="3.6.5" />
     <PackageReference Include="RabbitMQ.Client" Version="6.4.0" />
+    <PackageReference Include="RestSharp" Version="109.0.1" />
   </ItemGroup>
 
   <ItemGroup>
