--- a/src/MessageSilo.Shared/MessageSilo.Shared.csproj
+++ b/src/MessageSilo.Shared/MessageSilo.Shared.csproj
@@ -22,4 +22,8 @@
     <Orleans_CodeGenInputs Remove="Models\MessageReceivedEventArgs.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Orleans_CodeGenInputs Remove="Models\Entity.cs" />
+  </ItemGroup>
+
 </Project>
