--- a/.github/workflows/siloctl-release.yml
+++ b/.github/workflows/siloctl-release.yml
@@ -1,9 +1,9 @@
-name: siloctl-release
+name: siloctl-release - v1.0.${{github.run_number}}
 
 on:
   push:
     tags:
-      - "v*" # Push events to matching v*, i.e. v1.0, v20.15.10
+      - "siloctl-v*" # Push events to matching v*, i.e. v1.0, v20.15.10
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
@@ -21,7 +21,7 @@ jobs:
 
       - name: Publish
         working-directory: ./src/MessageSilo.SiloCTL
-        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish"
+        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish" --version-suffix ${{github.run_number}}
 
       - name: Prepare package
         working-directory: /home/runner/work/MessageSilo/publish
