--- a/.github/workflows/siloctl-release.yml
+++ b/.github/workflows/siloctl-release.yml
@@ -1,11 +1,10 @@
-name: siloctl-release - v1.0.${{github.run_number}}
+name: siloctl-release
 
-on:
-  push:
-    tags:
-      - "siloctl-v*" # Push events to matching v*, i.e. v1.0, v20.15.10
+on: workflow_dispatch
+  
 jobs:
   build-and-publish:
+  name: siloctl-v1.0.${{github.run_number}}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
