--- a/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
+++ b/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
@@ -9,7 +9,7 @@
     <SelfContained>true</SelfContained>
     <PackageId>siloctl</PackageId>
     <Title>Message Silo CLI</Title>
-    <Version>1.0.*</Version>
+    <Version>0.0.0</Version>
     <Authors>Daniel Berki</Authors>
     <Company>Message Silo</Company>
     <Product>siloctl</Product>
