--- a/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
+++ b/src/MessageSilo.SiloCTL/MessageSilo.SiloCTL.csproj
@@ -14,6 +14,7 @@
     <Company>Message Silo</Company>
     <Product>siloctl</Product>
     <PackageIcon>logo.png</PackageIcon>
+    <AssemblyName>siloctl</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
