--- a/.github/workflows/siloctl-release.yml
+++ b/.github/workflows/siloctl-release.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   build-and-publish:
-    name: siloctl-v${{ env.VERSION_NUMBER }}
+    name: siloctl-v${{ VERSION_NUMBER }}
     runs-on: ubuntu-latest
     env:
       VERSION_NUMBER: "1.0.${{github.run_number}}"
@@ -22,18 +22,18 @@ jobs:
 
       - name: Publish - Windows
         working-directory: ./src/MessageSilo.SiloCTL
-        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/win-x64" -p:Version="${{ env.VERSION_NUMBER }}" -r win-x64"
+        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/win-x64" -p:Version="${{ VERSION_NUMBER }}" -r win-x64"
 
       - name: Publish - Linux
         working-directory: ./src/MessageSilo.SiloCTL
-        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/linux-x64" -p:Version="${{ env.VERSION_NUMBER }}" -r linux-x64
+        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/linux-x64" -p:Version="${{ VERSION_NUMBER }}" -r linux-x64
 
       - name: Publish - MacOS
         working-directory: ./src/MessageSilo.SiloCTL
-        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/osx-x64" -p:Version="${{ env.VERSION_NUMBER }}" -r osx-x64
+        run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/osx-x64" -p:Version="${{ VERSION_NUMBER }}" -r osx-x64
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3.1.2
         with:
-          name: siloctl-${{ env.VERSION_NUMBER }}-windows
+          name: siloctl-${{ VERSION_NUMBER }}-windows
           path: "/home/runner/work/MessageSilo/publish/win-x64/siloctl.exe"
