--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -26,7 +26,17 @@ jobs:
         run: dotnet publish -c Release -o "/home/runner/work/MessageSilo/publish"
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3.1.2
+        uses: appleboy/scp-action@master
         with:
-          name: message-silo-silo-latest
-          path: "/home/runner/work/MessageSilo/publish/*"
+          host: ${{ secrets.IP }}
+          username: ${{ secrets.U }}
+          password: ${{ secrets.P }}
+          port: ${{ secrets.PORT }}
+          source: "/home/runner/work/MessageSilo/publish/*"
+          target: "/home/temp/silo"
+
+#      - name: Upload build artifact
+#        uses: actions/upload-artifact@v3.1.2
+#        with:
+#          name: message-silo-silo-latest
+#          path: "/home/runner/work/MessageSilo/publish/*"
