--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -31,15 +31,14 @@ jobs:
         run: rm appsettings.json
 
       - name: Upload build artifact
-        uses: appleboy/scp-action@master
+        uses: garygrossgarten/github-action-scp@release
         with:
           host: ${{ secrets.IP }}
           username: ${{ secrets.U }}
           password: ${{ secrets.P }}
           port: ${{ secrets.PORT }}
-          source: "/home/runner/work/MessageSilo/publish/YamlDotNet.dll"
-          target: "/home/temp/silo/"
-          strip_components: 1
+          local: /home/runner/work/MessageSilo/publish
+          remote: /home/temp/silo
 
 #      - name: Upload build artifact
 #        uses: actions/upload-artifact@v3.1.2
