--- a/.github/workflows/silo.yml
+++ b/.github/workflows/silo.yml
@@ -3,8 +3,9 @@ name: Silo
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    paths-ignore:
+      - ".github/workflows/**"
+      - "scripts/**"
 
 jobs:
   build:
