--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -3,8 +3,9 @@ name: API
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    paths-ignore:
+      - ".github/workflows/**"
+      - "scripts/**"
 
 jobs:
   build:
