--- a/.github/workflows/siloctl-build.yml
+++ b/.github/workflows/siloctl-build.yml
@@ -3,8 +3,9 @@ name: siloctl-build
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
+    paths-ignore:
+      - ".github/workflows/**"
+      - "scripts/**"
 
 jobs:
   build:
