--- a/.github/workflows/siloctl-release.yml
+++ b/.github/workflows/siloctl-release.yml
@@ -32,7 +32,9 @@ jobs:
         run: dotnet publish -c Release --sc -o "/home/runner/work/MessageSilo/publish/osx-x64" -p:Version="1.0.${{github.run_number}}-beta" -r osx-x64
 
       - name: Upload build artifact
-        uses: actions/upload-artifact@v3.1.2
+        uses: bacongobbler/azure-blob-storage-upload@main
         with:
-          name: siloctl-1.0.${{github.run_number}}-beta-windows
-          path: "/home/runner/work/MessageSilo/publish/win-x64/siloctl.exe"
+          source_dir: /home/runner/work/MessageSilo/publish
+          container_name: siloctl
+          connection_string: ${{ secrets.ReleasesStorageConnectionString }}
+          overwrite: 'true'
