--- a/.github/workflows/siloctl-release.yml
+++ b/.github/workflows/siloctl-release.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Install azure-cli
+        uses: pietrobolcato/install-azure-cli-action@v1
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
@@ -37,11 +40,8 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Upload build artifacts
-        uses: azure/CLI@v1
-        with:
-          azcliversion: latest
-          inlineScript: |
-            cd /home/runner/work/MessageSilo/publish
-            az storage blob upload-batch --account-name messagesiloreleases -d "siloctl-win-x64" -s "win-x64" --pattern "*"
-            az storage blob upload-batch --account-name messagesiloreleases -d "siloctl-linux-x64" -s "linux-x64" --pattern "*"
-            az storage blob upload-batch --account-name messagesiloreleases -d "siloctl-osx-x64" -s "osx-x64" --pattern "*"
+        working-directory: /home/runner/work/MessageSilo/publish
+        run: |
+          az storage blob upload-batch --account-name messagesiloreleases -d "siloctl-win-x64" -s "win-x64" --pattern "*"
+          az storage blob upload-batch --account-name messagesiloreleases -d "siloctl-linux-x64" -s "linux-x64" --pattern "*"
+          az storage blob upload-batch --account-name messagesiloreleases -d "siloctl-osx-x64" -s "osx-x64" --pattern "*"
